--- a/kodluyoruz-front-end/css/css_kutu_ozellikleri.html
+++ b/kodluyoruz-front-end/css/css_kutu_ozellikleri.html
@@ -12,7 +12,7 @@
         <div class="box bg-red">Lorem ipsum dolor sit amet.>
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Ducimus minima expedita id. Laudantium?</p>
-            <p>Dolores modi laboriosam ducimus reprehenderit.</p>
+            <p>Dolores modi laboriosam ducimus ayşe</p>
         </div>
 
         <div 
